# Strike_Squad

./: Makefile  pyproject.toml
.github/workflows/: gspread-cicd.yml  python-app.yml
project-3/: .gitignore  README.md  __init__.py  cli.py  credentials.json  exceptions.py  extract.sh  main.py  pyproject.toml
project-3/.github/workflows/: gspread-cicd.yml
project-3/requirements/: base.txt
project-3/tests/unit/: test_gspread_utility.py
project-3/tests/utils/: __init__.py  utils.py
project-4/: .gitignore  Bivariate_Analysis.ipynb  Text_Analysis.ipynb  clean.ipynb  outlier_detection.ipynb  requirements.txt  time_series.ipynb  univariate_analysis.ipynb
project-4/.ipynb_checkpoints/: clean-checkpoint.ipynb
project-5/: .gitignore  README.md  exceptions.py  main.py  pyproject.toml  utils.py
project-6/: .gitignore  README.md  exceptions.py  main.py  pyproject.toml  test_main.py
