[tool.poetry]
name = "strike-squad"
version = "0.1.0"
description = "Poetry setup"
authors = ["Strike_Squad"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
gspread = "^5.12.0"
fastparquet = "^2023.10.1"
fire = "^0.5.0"
google-auth = "^2.23.4"
pandas = "^2.1.2"
webdriver-manager = "^4.0.1"
gspread-dataframe = "^3.3.1"
python-decouple = "^3.8"
black = "^23.11.0"
pylint = "^3.0.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
