[tool.poetry]
name = "project-3"
version = "0.1.0"
description = "project 3 use poetry for CI/CD"
authors = ["Strike Squad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gspread = "5.11.3"
gspread-dataframe = "3.3.1"
pandas = "2.0.3"
python-dotenv = "1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
black = "23.11.0"
pylint = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

